# ln2manga

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: bible.example.yaml  default.yaml  references.example.yaml
docs/: DESIGN.md
experiments/: api_bubbles_prototype.py  hybrid_bubbles.py  transparent_bubble_composite.py
ln2manga/: __init__.py  artifacts.py  bible.py  bubbles.py  cache.py  cli.py  clients.py  config.py  cost.py  imagegen.py  references.py  retry.py
ln2manga/stages/: charsheet.py  export.py  layout.py  lettering.py  mangapost.py  panels.py  parse.py  scrape.py  script.py
tests/: conftest.py  test_bible.py  test_bubbles.py  test_cache.py  test_charsheet.py  test_cli.py  test_config.py  test_cost.py  test_imagegen.py  test_layout.py  test_lettering.py  test_mangapost_export.py  test_panels.py  test_parse.py  test_references.py  test_scrape.py
